...
  @override
  Widget build(BuildContext context) {
    // Show loading indicator while data is being fetched
    if (isLoading) {
      return Scaffold(
        appBar: AppBar(
          title: Text('Friends List'),
        ),
        body: Center(
          child: CircularProgressIndicator(),
        ),
      );
    }
...
                    context,
                    MaterialPageRoute(
                      builder: (context) => EventListPage(email: widget.email),
                    ),
                  );
                },
                child: Text('Create Your Own Event'),
                style: ElevatedButton.styleFrom(
                  padding: EdgeInsets.symmetric(vertical: 16.0),
                  textStyle: TextStyle(fontSize: 16),
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(12.0),
                  ),
...
